{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 45,
  "lineage": "3381a3c4-a952-8968-b561-843d55c09dfa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "notes_api_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:520473259663:loadbalancer/app/notesapidev/19281490733d909f",
            "arn_suffix": "app/notesapidev/19281490733d909f",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "notesapidev-1501508593.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:520473259663:loadbalancer/app/notesapidev/19281490733d909f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "notesapidev",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01d8f79bd7e21f79d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09fdbe8464fb91fbf"
              },
              {
                "subnet_id": "subnet-0a87e1bc90e439d6f"
              }
            ],
            "subnets": [
              "subnet-09fdbe8464fb91fbf",
              "subnet-0a87e1bc90e439d6f"
            ],
            "vpc_id": "vpc-0728fcf16875f3185",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.notes_api_dev",
            "aws_subnet.notes_api_dev",
            "aws_subnet.notes_api_dev_b",
            "aws_vpc.notes_api_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "notes_api_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:520473259663:internet-gateway/igw-04f9a630402dfc513",
            "id": "igw-04f9a630402dfc513",
            "owner_id": "520473259663",
            "tags": {
              "Name": "notes_api_dev"
            },
            "tags_all": {
              "Name": "notes_api_dev"
            },
            "vpc_id": "vpc-0728fcf16875f3185"
          },
          "dependencies": [
            "aws_vpc.notes_api_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "notes_api_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:520473259663:listener/app/notesapidev/19281490733d909f/4d71068b58d622d5",
            "certificate_arn": "arn:aws:acm:us-east-1:520473259663:certificate/992951fc-1442-46ed-baf5-931113d47e1d",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:520473259663:targetgroup/notesapidev/f27d3ca3b4a7ae6e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:520473259663:listener/app/notesapidev/19281490733d909f/4d71068b58d622d5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:520473259663:loadbalancer/app/notesapidev/19281490733d909f",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.notes_api_dev",
            "aws_lb_target_group.notes_api_dev",
            "aws_security_group.notes_api_dev",
            "aws_subnet.notes_api_dev",
            "aws_subnet.notes_api_dev_b",
            "aws_vpc.notes_api_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "notes_api_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:520473259663:targetgroup/notesapidev/f27d3ca3b4a7ae6e",
            "arn_suffix": "targetgroup/notesapidev/f27d3ca3b4a7ae6e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:520473259663:targetgroup/notesapidev/f27d3ca3b4a7ae6e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:520473259663:loadbalancer/app/notesapidev/19281490733d909f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "notesapidev",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0728fcf16875f3185"
          },
          "dependencies": [
            "aws_vpc.notes_api_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:520473259663:route-table/rtb-02c428b9bb96bd362",
            "id": "rtb-02c428b9bb96bd362",
            "owner_id": "520473259663",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04f9a630402dfc513",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0728fcf16875f3185"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.notes_api_dev",
            "aws_vpc.notes_api_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "notes_api_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001833f32c509f8e0",
            "route_table_id": "rtb-02c428b9bb96bd362",
            "subnet_id": "subnet-0a87e1bc90e439d6f"
          },
          "dependencies": [
            "aws_internet_gateway.notes_api_dev",
            "aws_route_table.public",
            "aws_subnet.notes_api_dev",
            "aws_vpc.notes_api_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "notes_api_dev_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06947e5665d2824f1",
            "route_table_id": "rtb-02c428b9bb96bd362",
            "subnet_id": "subnet-09fdbe8464fb91fbf"
          },
          "dependencies": [
            "aws_internet_gateway.notes_api_dev",
            "aws_route_table.public",
            "aws_subnet.notes_api_dev_b",
            "aws_vpc.notes_api_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "notes_api_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:520473259663:security-group/sg-01d8f79bd7e21f79d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d8f79bd7e21f79d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20240228181405489100000001",
            "name_prefix": "terraform-",
            "owner_id": "520473259663",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0728fcf16875f3185"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.notes_api_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "notes_api_dev_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:520473259663:security-group/sg-0dfeabc714cb9eacf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0dfeabc714cb9eacf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "terraform-20240228181405489200000002",
            "name_prefix": "terraform-",
            "owner_id": "520473259663",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0728fcf16875f3185"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.notes_api_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "notes_api_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:520473259663:subnet/subnet-0a87e1bc90e439d6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a87e1bc90e439d6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "520473259663",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0728fcf16875f3185"
          },
          "dependencies": [
            "aws_vpc.notes_api_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "notes_api_dev_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:520473259663:subnet/subnet-09fdbe8464fb91fbf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09fdbe8464fb91fbf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "520473259663",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0728fcf16875f3185"
          },
          "dependencies": [
            "aws_vpc.notes_api_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "notes_api_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:520473259663:vpc/vpc-0728fcf16875f3185",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0028137dd4b3db6c2",
            "default_route_table_id": "rtb-0973b2c2cdf5fa244",
            "default_security_group_id": "sg-0b2adfbef82911f83",
            "dhcp_options_id": "dopt-0f5e75313883db9ee",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0728fcf16875f3185",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0973b2c2cdf5fa244",
            "owner_id": "520473259663",
            "tags": {
              "Name": "notes_api_dev"
            },
            "tags_all": {
              "Name": "notes_api_dev"
            }
          }
        }
      ]
    }
  ]
}